--- a/index_2.html
+++ b/index_2.html
@@ -27,10 +27,10 @@
 
     <main>
         <div class="container">
-            <span><img src="assets/images/cards.png" alt="Гадальные карты"> </span>
-            <span><img src="assets/images/chronos.png" alt="Кулон хронос"></span>
-            <span><img src="assets/images/dagger.png" alt="Серебряный кинжал" class="dagger"></span>
-            <span><img src="assets/images/nimbus.png" alt="Метла Нимбус"></span>
+            <div><img src="assets/images/cards.png" alt="Гадальные карты" id="cards"> </div>
+            <div><img src="assets/images/chronos.png" alt="Кулон хронос" id="chronos"></div>
+            <div><img src="assets/images/dagger.png" alt="Серебряный кинжал" id="dagger"></div>
+            <div><img src="assets/images/nimbus.png" alt="Метла Нимбус" id="nimbus"></div>
         </div>
     </main>
 
