добавить ссылки в картинки и сделать подсказки

--- a/index_2.html
+++ b/index_2.html
@@ -27,17 +27,17 @@
 
     <main>
         <div class="container">
-<<<<<<< HEAD
-            <div><img src="assets/images/cards.png" alt="Гадальные карты" id="cards"> </div>
-            <div><img src="assets/images/chronos.png" alt="Кулон хронос" id="chronos"></div>
-            <div><img src="assets/images/dagger.png" alt="Серебряный кинжал" id="dagger"></div>
-            <div><img src="assets/images/nimbus.png" alt="Метла Нимбус" id="nimbus"></div>
-=======
-            <div><img src="assets/images/cards.png" alt="Гадальные карты"> </div>
-            <div><img src="assets/images/chronos.png" alt="Кулон хронос"></div>
-            <div><img src="assets/images/dagger.png" alt="Серебряный кинжал" class="dagger"></div>
-            <div><img src="assets/images/nimbus.png" alt="Метла Нимбус"></div>
->>>>>>> 09afebc9b7c1c184bd8c1913d7d7a312bd752f77
+            <div><a title="Магические карты" href="#"><img src="assets/images/cards.png" alt="Гадальные карты"
+                        id="cards" class="photo"></a>
+            </div>
+            <div><a title="Магический кулон" href="#"><img src="assets/images/chronos.png" alt="Кулон хронос"
+                        id="chronos" class="photo"></a>
+            </div>
+            <div><a title="Серебрянный кинжал" href="#"><img src="assets/images/dagger.png" alt="Серебряный кинжал"
+                        id="dagger" class="photo"></a>
+            </div>
+            <div><a title="Метла Нимбус" href="#"><img src="assets/images/nimbus.png" alt="Метла Нимбус" id="nimbus"
+                        class="photo"></a></div>
         </div>
     </main>
 
